test/libsolidity/syntaxTests/nameAndTypeResolution/338_rational_bitnot_unary_operation.sol
contract test {
    function f() public {
        ~fixed(3.5);
    }
}
// ----
// TypeError 4907: (50-61='~fixed(3.5)'): Unary operator ~ cannot be applied to type fixed128x18
